tests/pass/object_equality_basic.lum
use io

x = {
  a : 1
}
y = {a : 1
}
println(x == y)
