tests/fail/use_array_push_non_array.lum
use array
x = 10
push(x, 1)
